[tool.poetry]
name = "family-tree"
version = "0.1.0"
description = "Project for holding and managing realtives in my family tree"
authors = ["Ernest Knurov <ernknourov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.104.0"}
python-dotenv = "^1.0.0"
requests = "^2.31.0"
pymongo = "^4.6.0"
streamlit = "^1.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
