[tool.poetry]
name = "family-tree"
version = "0.1.0"
description = "Project for holding and managing relatives in my family tree"
authors = ["Ernest Knurov <ernknourov@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
streamlit = "^1.29.0"
graphviz = "^0.20.1"
babel = "^2.16.0"
notion-client = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"